--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,7 @@
 {
   "main": "index.js",
   "dependencies": {
-    "@celo/contractkit": "^1.0.2",
-    "bignumber.js": "^9.1.0"
+    "@celo/contractkit": "^1.0.2"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^5.0.0",
