--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,8 @@
 {
   "main": "index.js",
   "dependencies": {
-    "@celo/contractkit": "^1.0.2"
+    "@celo/contractkit": "^1.0.2",
+    "dotenv-webpack": "^8.0.1"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^5.0.0",
